--- a/package.json
+++ b/package.json
@@ -14,20 +14,28 @@
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "axios": "^1.3.4",
+    "formik": "^2.2.9",
     "lottie-react-native": "^5.1.5",
     "pdfmake": "^0.2.7",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-asset": "^2.0.1",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-mmkv": "^2.6.3",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
+    "react-native-quick-md5": "^3.0.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.0",
+    "react-native-simple-toast": "^1.1.4",
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.5.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "yup": "^1.0.2",
+    "zustand": "^4.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
