--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-mmkv": "^2.6.3",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-quick-md5": "^3.0.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
@@ -34,6 +35,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.5.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.26.1",
     "yup": "^1.0.2",
     "zustand": "^4.3.5"
   },
@@ -52,6 +54,7 @@
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.0.3",
     "typescript": "4.8.4"
   },
   "jest": {
