--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,10 @@ buildscript {
         google()
         mavenCentral()
         mavenLocal()
+         // ADD THIS
+      maven { url 'https://maven.google.com' }
+      // ADD THIS
+      maven { url "https://www.jitpack.io" }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:7.3.1")
