--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.71.3",
     "react-native-asset": "^2.0.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-image-crop-picker": "^0.39.0",
     "react-native-mmkv": "^2.6.3",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
