--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
@@ -23,6 +24,7 @@
     "react-native-asset": "^2.0.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-image-crop-picker": "^0.39.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.6.3",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
@@ -32,6 +34,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.0",
     "react-native-simple-toast": "^1.1.4",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.5.0",
