--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-share": "^8.2.0",
     "react-native-simple-toast": "^1.1.4",
     "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.8.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.5.0",
