--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "^1.8.4",
     "react-native-mmkv": "^2.6.3",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-pager-view": "^6.1.4",
