--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.maspes.admin</string>
+	<string>com.jalalajarra.Admin</string>
 	<key>PROJECT_ID</key>
 	<string>maspes-admin</string>
 	<key>STORAGE_BUCKET</key>
